syntax = "proto3";

option go_package = " github.com/awatercolorpen/olap-sql/api/proto";
package proto;

enum METRIC_TYPE {
    METRIC_TYPE_UNKNOWN = 0;
    METRIC_TYPE_VALUE = 1;
    METRIC_TYPE_COUNT = 2;
    METRIC_TYPE_DISTINCT_COUNT = 3;
    METRIC_TYPE_SUM = 4;
    METRIC_TYPE_ADD = 5;
    METRIC_TYPE_SUBTRACT = 6;
    METRIC_TYPE_MULTIPLY = 7;
    METRIC_TYPE_DIVIDE = 8;
    METRIC_TYPE_EXPRESSION = 20;
    METRIC_TYPE_POST = 99;
}

message Metric {
    METRIC_TYPE type = 1;
    string table = 2;
    string name = 3;
    string field_name = 4;
    repeated Metric children = 5;
}

message Dimension {
    string table = 1;
    string name = 2;
    string field_name = 3;
}

enum FILTER_OPERATOR_TYPE {
    FILTER_OPERATOR_UNKNOWN = 0;
    FILTER_OPERATOR_IN = 1;
    FILTER_OPERATOR_NOT_IN = 2;
    FILTER_OPERATOR_LESS_EQUALS = 3;
    FILTER_OPERATOR_LESS = 4;
    FILTER_OPERATOR_GREATER_EQUALS = 5;
    FILTER_OPERATOR_GREATER = 6;
    FILTER_OPERATOR_LIKE = 7;
    FILTER_OPERATOR_EXTENSION = 10;
    FILTER_OPERATOR_AND = 101;
    FILTER_OPERATOR_OR = 102;
}

enum VALUE_TYPE {
    VALUE_UNKNOWN = 0;
    VALUE_STRING = 1;
    VALUE_INTEGER = 2;
    VALUE_FLOAT = 3;
}

message Filter {
    FILTER_OPERATOR_TYPE operator_type = 1;
    VALUE_TYPE value_type = 2;
    string name = 3;
    repeated string value = 4;
    repeated Filter children = 5;
}

message JoinOn {
    string key1 = 1;
    string key2 = 2;
}

message Join {
    string database1 = 1;
    string database2 = 2;
    string table1 = 3;
    string table2 = 4;
    repeated JoinOn on = 5;
    repeated Filter filters = 6;
}

enum DATA_SOURCE_TYPE {
    DATA_SOURCE_UNKNOWN = 0;
    DATA_SOURCE_CLICKHOUSE = 1;
    DATA_SOURCE_DRUID = 2;
    DATA_SOURCE_KYLIN = 3;
    DATA_SOURCE_PRESTO = 4;
}

message DataSource {
    DATA_SOURCE_TYPE type = 1;
    string name = 2;
//    Request sub_request = 3;
}

message Request {
    repeated Metric metrics = 1;
    repeated Dimension dimensions = 2;
    repeated Filter filters = 3;
    repeated Join joins = 4;
    DataSource data_source = 5;
}
